--- a/app/scss/hacks/_hacks.scss
+++ b/app/scss/hacks/_hacks.scss
@@ -8,8 +8,8 @@
 
 // Stop sticky footer
 // from covering bottom of the page
-.container__button {
-  padding-bottom: 55px;
+.buttons__container {
+  padding-bottom: 60px;
 }
 
 .buttons__container--intro {
